# Corewar

./: .nfs.20051119.1cba  CMakeLists.txt  Makefile  author  test_cor.tar
Asm/includes/: asm.h
Asm/src/: ._correct_char_name.c  arguments_check.c  asm_main.c  cal.c  codage_octal.c  correct_char_name.c  correct_name_command.c  for_par_vad.c  have_something_after_space.c  instead_label_way.c  most_long_long.c  norm_main.c  op.c  open_file_cor.c  parameter_validation.c  prog_size.c  return_new_command.c  start_label.c  ten_hex.c  valid_label.c  weight_command.c  write_char_hex.c  write_in_file.c
Bots/: bender.s
Bots/players/: ._bee_gees.s
Libft/: Makefile
Libft/ft_printf/: ._base.c  ._cast_mod.c  ._cast_mod_b.c  ._cast_mod_base.c  ._cast_mod_cont.c  ._cast_mod_contn.c  ._cast_mod_contnext.c  ._cast_mod_next.c  ._cast_modnex.c  ._cast_nnnnn.c  ._cast_standart_for_base.c  ._castflag_bigc.c  ._castflag_bigs.c  ._castflag_c.c  ._castflag_s.c  ._castpress_bigs.c  ._castpress_s.c  ._checkcan.c  ._checktype.c  ._createres.c  ._do_format.c  ._dowchar_t.c  ._ft_itoa_base.c  ._ft_null.c  ._ft_printf.c  ._ft_printf.h  ._ft_putstrnew.c  ._minusmissing.c  ._minuspresent.c  ._numnull.c  ._otherutf.c  ._preox.c  ._printhesh.c  ._searcharg.c  ._startformat.c  ._upperarg.c  ._utflen.c  ._writepress.c  ._writewchar_t.c  ._writewidth.c  (+23 more)
asm/: Makefile  asm
champs/: ._42.cor  ._42.s  ._Backward.s  ._Car.s  ._Death.s  ._Gagnant.s  ._Octobre_Rouge_V4.2.s  ._Survivor.s  ._Torpille.s  ._barriere.s  ._championships  ._ex.s  ._examples  ._jumper.s  ._lde.s  ._leeloo.s  ._mat.s  ._maxidef.s  ._mortel.s  ._new.s  ._sebc.s  ._slider2.s  ._tdc2.s  ._tdc3.s  ._tdc4.s  ._toto.s
libft/: Makefile
vm/: Makefile
(+396 files in other folders)
